--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,10 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="field">
+    <%= f.label :caddy_number %><br />
+    <%= f.email_field :caddy_number, autofocus: true, autocomplete: "caddy_number" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
