--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_for @report do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
-  <%# <%= f.select :bags%> 
+  <%= f.select :bags,Report.bags.keys,{},class:"select--wrap__default " %>
   <%= f.date_field :registered_at %>
   
   <%= f.submit "登録する", class: "btn btn-primary" %>
