キャディ情報登録ページ遷移

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -5,3 +5,5 @@
 -else
   = link_to "新規会員登録", new_user_registration_path, class: "btn loginPage-b_contents_btn"
   = link_to "ログインする", new_user_session_path, class: "btn loginPage-c_contents_btn"
+.register-tab__box--text
+  = link_to 'キャディ情報登録', new_report_path, class: "register-tab__box--text"
