ユーザーコントローラ記述

--- a/app/views/reports/search.html.haml
+++ b/app/views/reports/search.html.haml
@@ -3,6 +3,7 @@
     =link_to reports_path(@report) do
       .caddy-name 
       = report.name
+      .caddy-bags
       = report.bags
 .return_btn
   = link_to "caddy情報登録ページへ",new_report_path,class:"teacher-details-edit__btn"
