--- a/app/views/reports/index.html.haml
+++ b/app/views/reports/index.html.haml
@@ -4,7 +4,8 @@
   = report.bags
 = search_form_for(@q,url:search_report_path(@reports)) do|f|
 
-  = f.label :created_at,"日付で検索"
+  = f.label :registered_at,"日付で検索"
+  = f.date_select :registered_at_gteq
   = f.date_select :registered_at_lteq_end_of_day,  class: "search-input"
   = f.submit "検索", class: "search-btn",type:"submit"
 = search_form_for(@q,url:search_report_path(@reports)) do|f|
