--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -2,6 +2,7 @@
 = form_for @report do |f|
   = f.label :name　
   = f.text_field :name
+  = f.label :bags
   = f.select :bags,Report.bags.keys,{prompt:"---"},class:"select--wrap__default "
   = f.date_field :registered_at
   = f.submit "登録する", class: "btn btn-primary"
